@@ -1,0 +1,1 @@
+MD5 bc6efc34ac3a98100d45a55b87306bd7 linux-dvb.2003-06-08.tar.bz2 592867
