@@ -1,6 +1,10 @@
 # ChangeLog for media-video/linuxdvb
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/linuxtv-dvb/Attic/ChangeLog,v 1.2 2003/06/04 08:19:00 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/linuxtv-dvb/Attic/ChangeLog,v 1.3 2003/06/10 10:03:30 mad Exp $
+
+*linuxtv-dvb-1.0.0_pre3-r20030608 (10 Jun 2003)
+  10 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
+  new cvs head version
 
 *linuxtv-dvb-1.0.0_pre3 (04 Jun 2003)
   04 Jun 2003; Martin Hierling <mad@cc.fh-lippe.de>
